# kkcrypto

./: .env  .mcp.json  CLAUDE.md  Cargo.toml  README.md  monitor.sh
src/: lib.rs  main.rs
src/db/: master.csv  mod.rs  schema.mongo.js
src/exchanges/: binance.rs  bybit.rs  hyperliquid.rs  mod.rs
src/models/: market_type.rs  mod.rs  trade.rs  trade_candle.rs
src/utils/: mod.rs  symbol_manager.rs  trade_candle_builder.rs
