[package]
name = "kkcrypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.41", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
anyhow = "1.0"
url = "2.5"
async-trait = "0.1"
mongodb = { version = "3.1" }
uuid = { version = "1.11", features = ["v4", "serde"] }
dotenv = "0.15"
clap = { version = "4.5", features = ["derive"] }
lazy_static = "1.5"
polars = { version = "0.36", features = ["lazy", "temporal", "strings"] }
futures = "0.3"

[[bin]]
name = "bybit"
path = "src/bin/bybit.rs"

[[bin]]
name = "binance"
path = "src/bin/binance.rs"

[[bin]]
name = "hyperliquid"
path = "src/bin/hyperliquid.rs"

[[bin]]
name = "correlation"
path = "src/bin/correlation.rs"
